--- a/Vanilla-weather-app/index.html
+++ b/Vanilla-weather-app/index.html
@@ -12,12 +12,31 @@
       crossorigin="anonymous"
     />
 
-    <title>Weather app</title>
+    <title>Weather App</title>
   </head>
   <body>
     <div class="container">
-      <h1>Hello World</h1>
-      <a href="" class="btn btn-primary">click me</a>
+      <h1>Ottawa</h1>
+      <ul>
+        <li>Thursday 03:00</li>
+        <li>clear</li>
+      </ul>
+      <div class="row">
+        <div class="col-6">
+          <img
+            src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
+            alt="cloudy"
+          />
+          3°C | °F
+        </div>
+        <div class="col-6">
+          <ul>
+            <li>Precipitation: 2%</li>
+            <li>Humidity: 40%</li>
+            <li>Wind: 16km/h</li>
+          </ul>
+        </div>
+      </div>
     </div>
     <script src="src/app.js"></script>
   </body>
