--- a/Vanilla-weather-app/index.html
+++ b/Vanilla-weather-app/index.html
@@ -16,26 +16,36 @@
   </head>
   <body>
     <div class="container">
-      <h1>Ottawa</h1>
-      <ul>
-        <li>Thursday 03:00</li>
-        <li>clear</li>
-      </ul>
-      <div class="row">
-        <div class="col-6">
-          <img
-            src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
-            alt="cloudy"
-          />
-          3°C | °F
+      <div class="weather-app">
+        <h1>Ottawa</h1>
+        <ul>
+          <li>Thursday 03:00</li>
+          <li>clear</li>
+        </ul>
+        <div class="row">
+          <div class="col-6">
+            <img
+              src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
+              alt="cloudy"
+            />
+            3°C | °F
+          </div>
+          <div class="col-6">
+            <ul>
+              <li>Precipitation: 2%</li>
+              <li>Humidity: 40%</li>
+              <li>Wind: 16km/h</li>
+            </ul>
+          </div>
         </div>
-        <div class="col-6">
-          <ul>
-            <li>Precipitation: 2%</li>
-            <li>Humidity: 40%</li>
-            <li>Wind: 16km/h</li>
-          </ul>
-        </div>
+        <small>
+          <a
+            href="https://github.com/intsketsia/Vanilla-weather-app"
+            target="blank"
+            >Open-source code</a
+          >
+          by Emmanuella Ketsia
+        </small>
       </div>
     </div>
     <script src="src/app.js"></script>
