--- a/Vanilla-weather-app/index.html
+++ b/Vanilla-weather-app/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -18,10 +19,10 @@
       <div class="weather-app-wrapper">
         <div class="weather-app">
           <div class="overview">
-            <h1>Ottawa</h1>
+            <h1 id="city"></h1>
             <ul>
               <li>Thursday 03:00</li>
-              <li>clear</li>
+              <li id="description"></li>
             </ul>
           </div>
           <div class="row">
@@ -31,15 +32,14 @@
                   src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
                   alt="cloudy"
                 />
-                <strong> 30</strong
+                <strong id="temperature"></strong
                 ><span class="units">°C|<a href="#">°F</a></span>
               </div>
             </div>
             <div class="col-6">
               <ul>
-                <li>Precipitation: 2%</li>
-                <li>Humidity: 40%</li>
-                <li>Wind: 16km/h</li>
+                <li>Humidity: <span id="humidity"></span>%</li>
+                <li>Wind: <span id="wind"></span>km/h</li>
               </ul>
             </div>
           </div>
