--- a/Vanilla-weather-app/index.html
+++ b/Vanilla-weather-app/index.html
@@ -29,8 +29,9 @@
             <div class="col-6">
               <div class="clearfix weather-temperature">
                 <img
-                  src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
+                  src="http://openweathermap.org/img/wn/10d@2x.png"
                   alt="cloudy"
+                  id="icon"
                 />
                 <strong id="temperature"></strong
                 ><span class="units">°C|<a href="#">°F</a></span>
