--- a/Vanilla-weather-app/index.html
+++ b/Vanilla-weather-app/index.html
@@ -22,7 +22,7 @@
             <div class="row">
               <div class="col-9">
                 <input
-                  type="seearch"
+                  type="search"
                   placeholder="Type a city.."
                   class="form-control"
                   id="city-input"
