--- a/Vanilla-weather-app/index.html
+++ b/Vanilla-weather-app/index.html
@@ -74,7 +74,10 @@
             target="blank"
             >Open-source code</a
           >
-          by Emmanuella Ketsia
+          by Emmanuella Ketsia and
+          <a href="https://trusting-jepsen-b4a5fc.netlify.app"
+            >hosted on Netlify</a
+          >
         </small>
       </div>
     </div>
